with comp1, comp2, generation script, report

--- a/HW/HW1/conf_mat.html
+++ b/HW/HW1/conf_mat.html
@@ -51,7 +51,7 @@
   </thead>
   <tbody>
     <tr>
-      <th>VBN</th>
+      <th>WDT</th>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -66,12 +66,7 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>0</td>
-      <td>36</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>3</td>
+      <td>20</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -84,15 +79,20 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
+      <td>1</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>46</td>
-      <td>0</td>
-      <td>413</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>97</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -114,7 +114,7 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>7</td>
+      <td>6</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -127,10 +127,10 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>4</td>
+      <td>3</td>
       <td>0</td>
       <td>0</td>
-      <td>38</td>
+      <td>40</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -164,7 +164,7 @@
       <td>0</td>
       <td>0</td>
       <td>2</td>
-      <td>75</td>
+      <td>76</td>
       <td>0</td>
       <td>0</td>
       <td>10</td>
@@ -176,7 +176,7 @@
       <td>0</td>
       <td>1</td>
       <td>0</td>
-      <td>10</td>
+      <td>9</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -360,9 +360,57 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>33</td>
       <td>31</td>
+      <td>33</td>
       <td>15</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>FW</th>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>2</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -408,54 +456,6 @@
       <td>0</td>
       <td>0</td>
       <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <th>FW</th>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>3</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
