--- a/HW/HW1/conf_mat.html
+++ b/HW/HW1/conf_mat.html
@@ -51,7 +51,7 @@
   </thead>
   <tbody>
     <tr>
-      <th>WDT</th>
+      <th>VBN</th>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -66,7 +66,12 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>20</td>
+      <td>0</td>
+      <td>35</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>3</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -79,20 +84,15 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>1</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
+      <td>46</td>
+      <td>0</td>
+      <td>414</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>97</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -114,7 +114,7 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>6</td>
+      <td>8</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -127,10 +127,10 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>3</td>
+      <td>4</td>
       <td>0</td>
       <td>0</td>
-      <td>40</td>
+      <td>37</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -164,7 +164,7 @@
       <td>0</td>
       <td>0</td>
       <td>2</td>
-      <td>76</td>
+      <td>75</td>
       <td>0</td>
       <td>0</td>
       <td>10</td>
@@ -176,7 +176,7 @@
       <td>0</td>
       <td>1</td>
       <td>0</td>
-      <td>9</td>
+      <td>10</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -261,7 +261,7 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>6</td>
+      <td>5</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -273,7 +273,7 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>6</td>
+      <td>7</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -360,57 +360,9 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
-      <td>31</td>
       <td>33</td>
+      <td>31</td>
       <td>15</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <th>FW</th>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
@@ -456,6 +408,54 @@
       <td>0</td>
       <td>0</td>
       <td>1</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th>FW</th>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>3</td>
       <td>0</td>
       <td>0</td>
       <td>0</td>
